# dragonfly

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
examples/: README.md
examples/Common Programming Concepts/: Comments.drg  Control Flow.drg  Data Types.drg  Functions.drg  Operators.drg  References and Copying.drg  Variables.drg
examples/Error Handling/: Option and Result types.drg
examples/Generics/: Generics for functions.drg
examples/Strings, Lists, Tuples, and Sets/: Lists.drg  Sets.drg  Strings.drg  Tuples.drg
examples/User-defined Types/: Enumerations.drg  Structures.drg  Trait.drg  Type Aliases.drg
include/dragon/: ast.h  lexer.h  parser.h  token.h
include/dragon/ast/: for_loop_node.h  function_call_node.h  identifier_node.h  if_else_node.h  literal_node.h  variable_assignment_node.h  variable_declaration_node.h  while_loop_node.h
src/: codegen.cpp  lexer.cpp  main.cpp  parser.cpp  token.cpp  vm.cpp
tests/: CMakeLists.txt  lexer_test.cpp  parser_test.cpp  semantics_test.cpp
tests/parser/: expressions.cpp  for_loop.cpp  function_call.cpp  if_else.cpp  variable_assignment.cpp  variable_declaration.cpp  while_loop.cpp
tests/test_programs/: program1.df  program2.df
